2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/x86_64 machines (Ubuntu 17.10, Debian).
	Reported by Sam Steingold and Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE): Ensure the same value across all
	Linux/x86_64 systems.
	(MAPPABLE_ADDRESS_RANGE_*, SINGLEMAP_WORKS) [UNIX_LINUX && AMD64]:
	Change.
	* Makefile.devel (multibuild-linux-x86_64): Remove
	build-porting64-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/powerpc machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_START)
	[UNIX_LINUX && POWERPC]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && POWERPC]: Set to 0.
	* Makefile.devel (multibuild-linux-powerpc): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/mips machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_END)
	[UNIX_LINUX && MIPS && !n32]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && MIPS && !n32]: Set to 0.
	* Makefile.devel (multibuild-linux-mips-32): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/i386 machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_START)
	[UNIX_LINUX && I80386]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && I80386]: Set to 0.
	* Makefile.devel (multibuild-linux-i386): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/arm machines.
	Reported by Dr. Werner Fink <werner@suse.de>.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && ARM]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && ARM]: Set to 0.
	* Makefile.devel (multibuild-linux-arm): Remove
	build-porting32-gcc-spvw_pure_blocks.
