@@ -2648,7 +2648,18 @@ typedef enum {
        MALLOC_ADDRESS_RANGE = 0x0000000009000000UL or 0x000000000E000000UL or 0x000000001E000000UL or 0x0000000021000000UL
        SHLIB_ADDRESS_RANGE  = 0x0000002000000000UL or 0x0000007F82000000UL
        STACK_ADDRESS_RANGE  = 0x0000007FC8000000UL or 0x0000007F7A000000UL or 0x0000007FF0000000UL or 0x0000007FFC000000UL
+       On Linux/arm64 build.opensuse.org or Debian build machines:
+       MMAP_FIXED_ADDRESS_HIGHEST_BIT = 47
+       CODE_ADDRESS_RANGE   = 0x0000000000000000UL or 0x0000AAAAxx000000UL
+       MALLOC_ADDRESS_RANGE = 0x0000000000000000UL or 0x0000AAAAxx000000UL
+       SHLIB_ADDRESS_RANGE  = 0x0000400000000000UL or 0x0000FFFFxx000000UL
+       STACK_ADDRESS_RANGE  = 0x0000FFFFFF000000UL or 0x0000FFFFxx000000UL
        There is room from 0x002100000000UL to 0x007F00000000UL. */
+    /* Force the same CODE_ADDRESS_RANGE across platforms. */
+    #if (CODE_ADDRESS_RANGE == 0x0000000000000000UL || (CODE_ADDRESS_RANGE >= 0x0000AAAA00000000UL && CODE_ADDRESS_RANGE < 0x0000AAAB00000000UL))
+      #undef CODE_ADDRESS_RANGE
+      #define CODE_ADDRESS_RANGE 0x0000AAAAFF000000UL
+    #endif
     #define MAPPABLE_ADDRESS_RANGE_START 0x002100000000UL
     #define MAPPABLE_ADDRESS_RANGE_END   0x007EFFFFFFFFUL
   #endif
@@ -3457,7 +3468,9 @@ Long-Float, Ratio and Complex (only if SPVW_MIXED).
       #define SINGLEMAP_TYPE_MASK    0x003F00000000UL
     #endif
     #define SINGLEMAP_oint_type_shift 32
-    #define SINGLEMAP_WORKS 1
+    /* Actually no such configuration works, because the CODE_ADDRESS_RANGE
+       consumes so many bits that we have at most 3+1 bits for the typecode. */
+    #define SINGLEMAP_WORKS 0
   #endif
   #if defined(UNIX_LINUX) && defined(DECALPHA) /* Linux/alpha */
     #define SINGLEMAP_ADDRESS_BASE 0UL
